unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Tracks the current status of the contact</description>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referred to Non-Profit</fullName>
            </value>
            <value>
                <fullName>Training Readiness</fullName>
            </value>
            <value>
                <fullName>Refer to Trainer</fullName>
            </value>
            <value>
                <fullName>Pre-Enrollment</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>In Training</fullName>
            </value>
            <value>
                <fullName>Post Training</fullName>
            </value>
            <value>
                <fullName>CNA (Credentialing)</fullName>
            </value>
            <value>
                <fullName>Job Readiness</fullName>
            </value>
            <value>
                <fullName>Searching In-Field</fullName>
            </value>
            <value>
                <fullName>Search Out-of-Field</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Advancement Eligibility Review</fullName>
            </value>
            <value>
                <fullName>Advancement Consultation</fullName>
            </value>
            <value>
                <fullName>Upskill</fullName>
            </value>
            <value>
                <fullName>On-Going Development</fullName>
            </value>
            <value>
                <fullName>Career Advancement</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Referred to Other Workforce</fullName>
            </value>
            <value>
                <fullName>Personal Pause</fullName>
            </value>
            <value>
                <fullName>Self Exit</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Out of Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>