unpackaged/main/default/objects/Contact/fields/Date_Onboarding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Onboarding_Completed__c</fullName>
    <label>Date Onboarding Completed</label>
    <type>Date</type>
</CustomField>