unpackaged/main/default/objects/Contact/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor</label>
    <type>Checkbox</type>
</CustomField>