unpackaged/main/default/objects/Contact/fields/Partner_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Status__c</fullName>
    <label>Partner Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>