unpackaged/main/default/objects/Contact/fields/SSN_Captured__c.field-meta.xml
<CustomField>
    <fullName>SSN_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Captured</label>
    <type>Checkbox</type>
</CustomField>